--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>isis-jdk-supplemental</artifactId>
 			<type>pom</type>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.core</groupId>
+			<artifactId>isis-core-privileged</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
