--- a/core/pom.xml
+++ b/core/pom.xml
@@ -475,6 +475,13 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.core</groupId>
+				<artifactId>isis-core-privileged</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.core</groupId>
 				<artifactId>isis-core-config</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>jar</type>
@@ -1639,6 +1646,8 @@
 		<module>../supplemental-model</module>
 
 		<module>jdk-supplemental</module>
+
+		<module>privileged</module>
 
 		<module>../commons</module>
 
