--- a/incubator/viewers/graphql/pom.xml
+++ b/incubator/viewers/graphql/pom.xml
@@ -43,6 +43,10 @@
 
 	<packaging>pom</packaging>
 
+	<properties>
+		<graphql-java.version>19.2</graphql-java.version>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 
@@ -90,26 +94,5 @@
 		<module>model</module>
 		<module>viewer</module>
 	</modules>
-
-	<repositories>
-		<repository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
 
 </project>
