ISIS-3198: fixes prev. commit
- split out graphql.test into its own artifact (JPMS test resource
loading issues with Spring 5.x)

--- a/incubator/viewers/graphql/pom.xml
+++ b/incubator/viewers/graphql/pom.xml
@@ -93,6 +93,7 @@
 		<module>applib</module>
 		<module>model</module>
 		<module>viewer</module>
+		<module>test</module>
 	</modules>
 
 </project>
