--- a/incubator/viewers/graphql/test/pom.xml
+++ b/incubator/viewers/graphql/test/pom.xml
@@ -21,12 +21,12 @@
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>isis-viewer-graphql-viewer</artifactId>
-	<name>Apache Isis Inc - Viewer GraphQL (Viewer)</name>
+	<artifactId>isis-viewer-graphql-test</artifactId>
+	<name>Apache Isis Inc - Viewer GraphQL (Test)</name>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.incubator.viewer.graphql.viewer</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/graphql/viewer</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.isis.incubator.viewer.graphql.test</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/isis/incubator/viewer/graphql/test</git-plugin.propertiesDir>
 	</properties>
 
 	<build>
@@ -41,21 +41,49 @@
 
 		<dependency>
 			<groupId>org.apache.isis.incubator.viewer</groupId>
-			<artifactId>isis-viewer-graphql-model</artifactId>
+			<artifactId>isis-viewer-graphql-viewer</artifactId>
 		</dependency>
+
+		<!-- TESTING -->
 
 		<dependency>
 			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-core-webapp</artifactId>
+			<artifactId>isis-core-internaltestsupport</artifactId>
+			<scope>test</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-websocket</artifactId>
+			<groupId>org.apache.isis.security</groupId>
+			<artifactId>isis-security-bypass</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.core</groupId>
+			<artifactId>isis-core-runtimeservices</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.testing</groupId>
+			<artifactId>isis-testing-fixtures-applib</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.approvaltests</groupId>
+			<artifactId>approvaltests</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.persistence</groupId>
+			<artifactId>isis-persistence-jpa-eclipselink</artifactId>
+			<scope>test</scope>
 			<exclusions>
 				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-logging</artifactId>
+					<groupId>org.eclipse.persistence</groupId>
+					<artifactId>jakarta.persistence</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
