--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -67,6 +67,12 @@
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-core-privileged</artifactId>
 		</dependency>
+		
+		<!-- provides @Nullable that's required by Spring 5.x (as Spring is on the module path) -->
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
