--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1077,8 +1077,24 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
                                 </goals>
                                 <!-- APACHE ISIS customisation 19/21: start -->
                                 <configuration>
+                                    <notimestamp>true</notimestamp>
                                     <sourcepath>${delombok.output}</sourcepath>
                                     <doclint>none</doclint>
+                                    <failOnError>false</failOnError>
+
+                                    <debug>true</debug>
+                                    <minmemory>128m</minmemory>
+                                    <maxmemory>1024m</maxmemory>
+                                    <quiet>true</quiet>
+                                    <doctitle>${project.name} ${project.version}</doctitle>
+                                    <windowtitle>${project.name} ${project.version}</windowtitle>
+                                    <splitindex>true</splitindex>
+                                    <encoding>${project.build.sourceEncoding}</encoding>
+                                    <links>
+                                        <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
+                                    </links>
+                                    <linksource>true</linksource>
+                                    <detectOfflineLinks>false</detectOfflineLinks>
                                 </configuration>
                                 <!-- APACHE ISIS customisation 19/21: end -->
                             </execution>
