--- a/regressiontests/stable/pom.xml
+++ b/regressiontests/stable/pom.xml
@@ -48,6 +48,11 @@
 			<groupId>org.apache.isis.valuetypes</groupId>
 			<artifactId>isis-valuetypes-markdown-metamodel</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+			<artifactId>isis-valuetypes-vega-metamodel</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.isis.extensions</groupId>
