ISIS-3123: migrate Markdown

--- a/examples/demo/domain/pom.xml
+++ b/examples/demo/domain/pom.xml
@@ -88,6 +88,10 @@
 			<groupId>org.apache.isis.valuetypes</groupId>
 			<artifactId>isis-valuetypes-asciidoc-metamodel</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+			<artifactId>isis-valuetypes-markdown-metamodel</artifactId>
+		</dependency>
 
 
 		<!-- JDO specific -->
