--- a/examples/demo/wicket/common/pom.xml
+++ b/examples/demo/wicket/common/pom.xml
@@ -90,6 +90,11 @@
 			<groupId>org.apache.isis.valuetypes</groupId>
 			<artifactId>isis-valuetypes-markdown-ui-wkt</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.valuetypes</groupId>
+			<artifactId>isis-valuetypes-vega-ui-wkt</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.isis.extensions</groupId>
