--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -224,79 +224,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>de.agilecoders.wicket</groupId>
-			<artifactId>wicket-bootstrap-extensions</artifactId>
-			<exclusions>
-				<!-- exclude unused extensions -->
-				<exclusion>
-					<groupId>org.apache.wicket</groupId>
-					<artifactId>wicket-util</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.wicket</groupId>
-					<artifactId>wicket-request</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.wicket</groupId>
-					<artifactId>wicket-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.apache.wicket</groupId>
-					<artifactId>wicket-extensions</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>bootstrap</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>font-awesome</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>jquery</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>jquerypp</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>jquery-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>typeaheadjs</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>x-editable-bootstrap</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars</groupId>
-					<artifactId>spin-js</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.google.javascript</groupId>
-					<artifactId>closure-compiler</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.google.javascript</groupId>
-					<artifactId>closure-compiler-unshaded</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.webjars.bower</groupId>
-					<artifactId>summernote</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>summernote</artifactId>
+		</dependency>
+		<!-- required by tempus-dominus up to v5 -->
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>momentjs</artifactId>
 		</dependency>
 
 		<dependency>
