--- a/antora/playbooks/site-valuetypes.yml
+++ b/antora/playbooks/site-valuetypes.yml
@@ -49,8 +49,14 @@ content:
     - url: .
       start_path: valuetypes/asciidoc/adoc # valuetypes
       branches: HEAD
+#    - url: .
+#      start_path: valuetypes/jodatime/adoc # valuetypes
+#      branches: HEAD
     - url: .
       start_path: valuetypes/markdown/adoc # valuetypes
+      branches: HEAD
+    - url: .
+      start_path: valuetypes/vega/adoc # valuetypes
       branches: HEAD
 
 
