--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -310,8 +310,8 @@ asciidoc:
     kroki-default-options: interactive # only available for SVG
     kroki-fetch-diagram: true
     kroki-server-url: https://kroki.io # (default)
-    page-isisprev: "2.0.0-M8"
-    page-isisrel: "2.0.0-M9"
+    page-isisprev: "2.0.0-M9"
+    page-isisrel: "2.0.0-RC1"
 
 output:
   dir: antora/target/site
