--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.apache.isis</groupId>
-	<artifactId>isis-all</artifactId>
+	<groupId>org.apache.causeway</groupId>
+	<artifactId>causeway-all</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
-	<name>Apache Isis (Aggregator)</name>
+	<name>Apache Causeway (Aggregator)</name>
 	<description>
         Convenience aggregator POM that references all modules, some explicitely,
         others via profiles, that are not activiated per default.
