--- a/mavendeps/pom.xml
+++ b/mavendeps/pom.xml
@@ -15,25 +15,25 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.core</groupId>
-		<artifactId>isis-core</artifactId>
+		<groupId>org.apache.causeway.core</groupId>
+		<artifactId>causeway-core</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../core/pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.apache.isis.mavendeps</groupId>
-	<artifactId>isis-mavendeps</artifactId>
+	<groupId>org.apache.causeway.mavendeps</groupId>
+	<artifactId>causeway-mavendeps</artifactId>
 
-	<name>Apache Isis Maven Deps</name>
+	<name>Apache Causeway Maven Deps</name>
 	<description>
-        Collection of Apache Isis Maven Dependency Bundles.
+        Collection of Apache Causeway Maven Dependency Bundles.
     </description>
 
 	<packaging>pom</packaging>
 
 	<properties>
-		<jar-plugin.automaticModuleName>org.apache.isis.mavendeps</jar-plugin.automaticModuleName>
-		<git-plugin.propertiesDir>org/apache/isis/mavendeps</git-plugin.propertiesDir>
+		<jar-plugin.automaticModuleName>org.apache.causeway.mavendeps</jar-plugin.automaticModuleName>
+		<git-plugin.propertiesDir>org/apache/causeway/mavendeps</git-plugin.propertiesDir>
 
 		<lombok.version>1.18.24</lombok.version>
 
@@ -71,24 +71,24 @@
 		<dependencies>
 		
 			<dependency>
-				<groupId>org.apache.isis.core</groupId>
-				<artifactId>isis-core</artifactId>
+				<groupId>org.apache.causeway.core</groupId>
+				<artifactId>causeway-core</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing</artifactId>
+				<groupId>org.apache.causeway.testing</groupId>
+				<artifactId>causeway-testing</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.mavendeps</groupId>
-				<artifactId>isis-mavendeps-webapp</artifactId>
+				<groupId>org.apache.causeway.mavendeps</groupId>
+				<artifactId>causeway-mavendeps-webapp</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
