--- a/mavendeps/webapp/pom.xml
+++ b/mavendeps/webapp/pom.xml
@@ -16,19 +16,19 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.apache.isis.mavendeps</groupId>
-		<artifactId>isis-mavendeps</artifactId>
+		<groupId>org.apache.causeway.mavendeps</groupId>
+		<artifactId>causeway-mavendeps</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>isis-mavendeps-webapp</artifactId>
+	<artifactId>causeway-mavendeps-webapp</artifactId>
 
 	<packaging>pom</packaging>
 
-	<name>Apache Isis Maven Deps - Webapp</name>
+	<name>Apache Causeway Maven Deps - Webapp</name>
 	<description>
         Defines a module that can be almost used as a single dependency for running
-        an Apache Isis webapp (Wicket, Restful Objects, GraphQL and Shiro security).
+        an Apache Causeway webapp (Wicket, Restful Objects, GraphQL and Shiro security).
 
         Note: Also requires a persistence provider.
     </description>
@@ -63,40 +63,40 @@
 
 		<!-- ISIS API -->
 		<dependency>
-			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-applib</artifactId>
+			<groupId>org.apache.causeway.core</groupId>
+			<artifactId>causeway-applib</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-schema</artifactId>
+			<groupId>org.apache.causeway.core</groupId>
+			<artifactId>causeway-schema</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.viewer</groupId>
-			<artifactId>isis-viewer-wicket-viewer</artifactId>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-wicket-viewer</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.viewer</groupId>
-			<artifactId>isis-viewer-restfulobjects-jaxrsresteasy4</artifactId>
+			<groupId>org.apache.causeway.viewer</groupId>
+			<artifactId>causeway-viewer-restfulobjects-jaxrsresteasy4</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-core-security</artifactId>
+			<groupId>org.apache.causeway.core</groupId>
+			<artifactId>causeway-core-security</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.isis.security</groupId>
-			<artifactId>isis-security-bypass</artifactId>
+			<groupId>org.apache.causeway.security</groupId>
+			<artifactId>causeway-security-bypass</artifactId>
 		</dependency>
 
 		<!--
 		we no longer include isis-security-keycloak in order to reduce the
 		3rd party dependencies.
 		<dependency>
-			<groupId>org.apache.isis.security</groupId>
-			<artifactId>isis-security-keycloak</artifactId>
+			<groupId>org.apache.causeway.security</groupId>
+			<artifactId>causeway-security-keycloak</artifactId>
 		</dependency>
 		-->
 
@@ -106,8 +106,8 @@
 		is required, Secman can now be used independently of Shiro.
 
 		<dependency>
-			<groupId>org.apache.isis.security</groupId>
-			<artifactId>isis-security-shiro</artifactId>
+			<groupId>org.apache.causeway.security</groupId>
+			<artifactId>causeway-security-shiro</artifactId>
 		</dependency>
 		-->
 
@@ -121,14 +121,14 @@
 		 automatically enable security on all endpoints
 
 		<dependency>
-			<groupId>org.apache.isis.security</groupId>
-			<artifactId>isis-security-spring</artifactId>
+			<groupId>org.apache.causeway.security</groupId>
+			<artifactId>causeway-security-spring</artifactId>
 		</dependency>
 		-->
 
 		<dependency>
-			<groupId>org.apache.isis.core</groupId>
-			<artifactId>isis-core-runtimeservices</artifactId>
+			<groupId>org.apache.causeway.core</groupId>
+			<artifactId>causeway-core-runtimeservices</artifactId>
 		</dependency>
 
 	</dependencies>
