--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -18,8 +18,8 @@
 
 	<!-- this must come before <parent> because the version is manually updated
 		in build-artifacts.sh -->
-	<groupId>org.apache.isis.app</groupId>
-	<artifactId>isis-app-starter-parent</artifactId>
+	<groupId>org.apache.causeway.app</groupId>
+	<artifactId>causeway-app-starter-parent</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -30,9 +30,9 @@
 		<relativePath />
 	</parent>
 
-	<name>Apache Isis Starter Parent</name>
+	<name>Apache Causeway Starter Parent</name>
 	<description>
-		Parent pom providing dependency and plugin management for Apache Isis applications
+		Parent pom providing dependency and plugin management for Apache Causeway applications
 		built with Maven. Builds on top of spring-boot-starter-parent.
 	</description>
 	<url>https://isis.apache.org</url>
@@ -83,52 +83,52 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.apache.isis.core</groupId>
-				<artifactId>isis-core</artifactId>
+				<groupId>org.apache.causeway.core</groupId>
+				<artifactId>causeway-core</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.extensions</groupId>
-				<artifactId>isis-extensions</artifactId>
+				<groupId>org.apache.causeway.extensions</groupId>
+				<artifactId>causeway-extensions</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing</artifactId>
+				<groupId>org.apache.causeway.testing</groupId>
+				<artifactId>causeway-testing</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 			
 			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing-fakedata-applib</artifactId>
+				<groupId>org.apache.causeway.testing</groupId>
+				<artifactId>causeway-testing-fakedata-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 		
 			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing-fixtures-applib</artifactId>
+				<groupId>org.apache.causeway.testing</groupId>
+				<artifactId>causeway-testing-fixtures-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.isis.valuetypes</groupId>
-				<artifactId>isis-valuetypes</artifactId>
+				<groupId>org.apache.causeway.valuetypes</groupId>
+				<artifactId>causeway-valuetypes</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
 			
 			<dependency>
-				<groupId>org.apache.isis.testing</groupId>
-				<artifactId>isis-testing-integtestsupport-applib</artifactId>
+				<groupId>org.apache.causeway.testing</groupId>
+				<artifactId>causeway-testing-integtestsupport-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
@@ -152,7 +152,7 @@
 			</activation>
 			<properties>
 
-				<!-- keep in sync with versions used in Apache Isis -->
+				<!-- keep in sync with versions used in Apache Causeway -->
 				<datanucleus-api-jdo.version>6.0.1</datanucleus-api-jdo.version>
 				<datanucleus-api-jpa.version>6.0.1</datanucleus-api-jpa.version>
 				<datanucleus-core.version>6.0.2</datanucleus-core.version>
