--- a/examples/vanilla/pom.xml
+++ b/examples/vanilla/pom.xml
@@ -27,7 +27,7 @@
 	created to allow comparisons of effective-pom between
 	isis-parent or isis vs vanilla Spring Boot.
 	-->
-	<groupId>org.apache.isis.examples.app</groupId>
+	<groupId>org.apache.causeway.examples.app</groupId>
 	<artifactId>vanilla</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
