--- a/incubator/clients/kroviz/pom.xml
+++ b/incubator/clients/kroviz/pom.xml
@@ -16,22 +16,22 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.incubator</groupId>
-        <artifactId>isis-incubator</artifactId>
+        <groupId>org.apache.causeway.incubator</groupId>
+        <artifactId>causeway-incubator</artifactId>
         <version>2.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <groupId>org.apache.isis.incubator.clients</groupId>
-    <artifactId>isis-client-kroviz</artifactId>
-    <name>Apache Isis Incubator - Client kroViz</name>
+    <groupId>org.apache.causeway.incubator.clients</groupId>
+    <artifactId>causeway-client-kroviz</artifactId>
+    <name>Apache Causeway Incubator - Client kroViz</name>
     <description>
         Web client based on RESTful API
     </description>
 
     <properties>
-        <jar-plugin.automaticModuleName>org.apache.isis.incubator.clients.kroviz</jar-plugin.automaticModuleName>
-        <git-plugin.propertiesDir>org/apache/isis/incubator/clients/kroviz</git-plugin.propertiesDir>
+        <jar-plugin.automaticModuleName>org.apache.causeway.incubator.clients.kroviz</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/causeway/incubator/clients/kroviz</git-plugin.propertiesDir>
     </properties>
 
     <packaging>jar</packaging>
